--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,18 +16,13 @@ services:
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
 
   api:
-    build:
-      context: .          # ← Changed from ./src to . (root directory)
-      dockerfile: dockerfile  # ← Make sure dockerfile is in root, or specify path
+    image: arshadafaque/faceapi:latest   # Pull from Docker Hub
     container_name: face-api
     restart: always
     depends_on:
       - db
     ports:
       - "8000:8000"
-    command: uvicorn main:app --host 0.0.0.0 --port 8000 --reload
-    volumes:
-      - .:/app            # ← Changed from ./src:/app to .:/app (mount entire project)
     environment:
       DATABASE_URL: postgresql+psycopg2://user:root@db:5432/face_recognition
 
